# MAS_project

./: README.md  pyproject.toml
src/sma_project/: crew.py  main.py
src/sma_project/config/: tasks.yaml
