[project]
name = "sma_project"
version = "0.1.0"
description = "SMA_Project using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.114.0,<1.0.0"
]

[project.scripts]
sma_project = "sma_project.main:run"
run_crew = "sma_project.main:run"
train = "sma_project.main:train"
replay = "sma_project.main:replay"
test = "sma_project.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
